--- a/Day1/index.html
+++ b/Day1/index.html
@@ -12,13 +12,18 @@
             <h2 class="question" id="question">Quiz Question</h2>
             <hr/>
             <ul>
-                <li><input type="radio" name="ans1" id="ans1"><label for="ans1" id="option1">Quiz option</label></li>
-                <li><input type="radio" name="ans2" id="ans2"><label for="ans1" id="option1">Quiz option</label></li>
-                <li><input type="radio" name="ans3" id="ans3"><label for="ans1" id="option1">Quiz option</label></li>
-                <li><input type="radio" name="ans4" id="ans4"><label for="ans1" id="option1">Quiz option</label></li>
-                <li><input type="radio" name="ans5" id="ans5"><label for="ans1" id="option1">Quiz option</label></li>
+                <li><input type="radio" name="ans1" id="ans1" class="answer"><label for="ans1" id="option1">Quiz option</label></li>
+                <li><input type="radio" name="ans2" id="ans2" class="answer"><label for="ans2" id="option2">Quiz option</label></li>
+                <li><input type="radio" name="ans3" id="ans3" class="answer"><label for="ans3" id="option3">Quiz option</label></li>
+                <li><input type="radio" name="ans4" id="ans4" class="answer"><label for="ans4" id="option4">Quiz option</label></li>
+                <!-- <li><input type="radio" name="ans5" id="ans5"><label for="ans1" id="option1">Quiz option</label></li> -->
             </ul>
+            <hr/>
+            <div class="button">
+                <button type="submit" id="submit">submit</button>
+            </div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
