--- a/Day1/index.html
+++ b/Day1/index.html
@@ -23,6 +23,9 @@
                 <button type="submit" id="submit">submit</button>
             </div>
         </div>
+        <div class="result"  >
+            <p id="score" style="display:none">you have completed the quizz</p>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
